Fixed emoji picker ghost bug on mobile.

--- a/web-client/src/styles/components/professor/review_form.module.scss
+++ b/web-client/src/styles/components/professor/review_form.module.scss
@@ -304,6 +304,7 @@
   opacity: 0;
   z-index: 999;
   pointer-events: none;
+  visibility: hidden;
 
   & > aside {
     position: absolute;
